--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -84,7 +84,7 @@ body {
 	height:50px;
 }
 
-#url{
+#url, #j_username, #j_password{
 	display:block;
 	width:276px;
 	height:45px;
@@ -153,12 +153,20 @@ body {
 }
 
 #submit1 {
+	background-image: url(../images/submit_hover.png);
+	border: solid 0px #000000;
+	width: 300px;
+	height: 40px;
 	position:absolute;
 	z-index: 10;
 	border:0;
 }
 
 #submit2 {
+	background-image: url(../images/submit.png);
+	border: solid 0px #000000;
+	width: 300px;
+	height: 40px;
 	position:absolute;
 	margin-top:0px;
 	border:0;
